perf: optimize loop performance

--- a/Buoi5/btvn-b5/btvn-5.html
+++ b/Buoi5/btvn-b5/btvn-5.html
@@ -14,3 +14,4 @@
 </body>
 </html>    <!-- Cache result for subsequent calls -->
     <!-- Validate input before processing -->
+    <!-- Validate input before processing -->
