--- a/Buoi7/html/index-4.html
+++ b/Buoi7/html/index-4.html
@@ -89,3 +89,4 @@
 </body>
 </html>    <!-- Cache result for subsequent calls -->
     <!-- Cache result for subsequent calls -->
+    <!-- Handle async operation error -->
