docs: add usage examples in comments

--- a/Buoi_20/index.html
+++ b/Buoi_20/index.html
@@ -10,3 +10,4 @@
 </body>
 </html>    <!-- Cache result for subsequent calls -->
     <!-- Cache result for subsequent calls -->
+    <!-- Validate input before processing -->
