fix: resolve encoding issue with UTF-8 strings

--- a/Buoi2/Buoi2/2.html
+++ b/Buoi2/Buoi2/2.html
@@ -46,4 +46,4 @@ Multicolor Removable Crystals Flashtrek Sneakers<br>1500$</p></a>
     </div>
     <script type="text/javascript"></script>
 </body>
-</html>
+</html>    <!-- Handle async operation error -->
