--- a/Nashtech/FE/B1/index.html
+++ b/Nashtech/FE/B1/index.html
@@ -7,25 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/reset.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js" integrity="sha256-+Q/z/qVOexByW1Wpv81lTLvntnZQVYppIL1lBdhtIq0=" crossorigin="anonymous"></script>
-    <title>Ocean Nguyen</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <header class="background-header ">
+    <header class="background">
         <div class="overlay"></div>
         <section class="top-header container grid">
             <div class="logo">
                 <a href="#"><img src="./images/logo.png" alt=""></a>
+
             </div>
             <nav class="navigation">
                 <div class="navbar-menu">
                     <ul class="menu">
-                        <li><a href="#">home</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">post</a></li>
-                        <li><a href="#">contact</a></li>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">POST</a></li>
+                        <li><a href="#">CONTACT</a></li>
+
                     </ul>
                 </div>
 
@@ -34,7 +37,9 @@
                     <i id="search-button" class="fas fa-search" onclick="searching()" aria-hidden="true"></i>
                     <p id="searching">searching ...</p>
                 </div>
+
             </nav>
+
         </section>
         <section class="info">
             <div class="info-news">
